<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.mcore</groupId>
    <artifactId>mcore-spring</artifactId>
    <version>0.26.0</version>
    <packaging>pom</packaging>

    <name>MemoryCore Spring Multi-Tenant</name>
    <description>Enterprise Multi-Tenant AI Agent Memory Hub based on Spring Boot 3 and PostgreSQL pgvector</description>

    <modules>
        <module>mcore-common</module>
        <module>mcore-tenancy</module>
        <module>mcore-storage</module>
        <module>mcore-mcp</module>
        <module>mcore-server</module>
    </modules>

    <properties>
        <java.version>17</java.version>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <spring-boot.version>3.3.3</spring-boot.version>
        <pgvector.version>0.1.6</pgvector.version>
        <postgresql.version>42.7.4</postgresql.version>
        <caffeine.version>3.1.8</caffeine.version>
        <hikari.version>5.1.0</hikari.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- Spring Boot Dependencies BOM -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- Local Submodules -->
            <dependency>
                <groupId>org.mcore</groupId>
                <artifactId>mcore-common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.mcore</groupId>
                <artifactId>mcore-tenancy</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.mcore</groupId>
                <artifactId>mcore-storage</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.mcore</groupId>
                <artifactId>mcore-mcp</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- PostgreSQL & pgvector -->
            <dependency>
                <groupId>org.postgresql</groupId>
                <artifactId>postgresql</artifactId>
                <version>${postgresql.version}</version>
            </dependency>
            <dependency>
                <groupId>com.pgvector</groupId>
                <artifactId>pgvector</artifactId>
                <version>${pgvector.version}</version>
            </dependency>

            <!-- Caffeine LRU Cache -->
            <dependency>
                <groupId>com.github.ben-manes.caffeine</groupId>
                <artifactId>caffeine</artifactId>
                <version>${caffeine.version}</version>
            </dependency>

            <!-- MyBatis Spring Boot 3 Starter -->
            <dependency>
                <groupId>org.mybatis.spring.boot</groupId>
                <artifactId>mybatis-spring-boot-starter</artifactId>
                <version>3.0.3</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                    <parameters>true</parameters>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
